rustdocs/errors/rust-bitcoin-bitcoin-examples-bip32.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
 --> ../rust-bitcoin/bitcoin/examples/bip32.rs:3:5
  |
3 | use bitcoin::address::{Address, KnownHrp};
  |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
  |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
  |
1 + extern crate bitcoin;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
 --> ../rust-bitcoin/bitcoin/examples/bip32.rs:4:5
  |
4 | use bitcoin::bip32::{ChildNumber, DerivationPath, Xpriv, Xpub};
  |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
  |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
  |
1 + extern crate bitcoin;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
 --> ../rust-bitcoin/bitcoin/examples/bip32.rs:5:5
  |
5 | use bitcoin::hex::FromHex;
  |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
  |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
  |
1 + extern crate bitcoin;
  |

error[E0432]: unresolved import `bitcoin`
 --> ../rust-bitcoin/bitcoin/examples/bip32.rs:6:5
  |
6 | use bitcoin::{CompressedPublicKey, NetworkKind};
  |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
  |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
  |
1 + extern crate bitcoin;
  |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
